--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
       </div>
 
       <div>
-      <%= render 'bookmarks/index' %>
+        <%= render 'bookmarks/index' %>
       </div>
 
       <%= link_to 'Edit', edit_user_path(@user), class:"btn btn-dark-green" %>
@@ -78,6 +78,8 @@
                   <% animal.adoptions.each do |adoption| %>
                     <% if adoption.status == "Aceito" %>
                       <div class="position-absolute top-0 start-0 w-100 bg-dark text-white d-flex justify-content-center align-items-center p-2">Adotado</div>
+                    <% elsif adoption.present? && adoption.status == "Pendente" %>
+                      <div class="position-absolute top-0 start-0 w-100 bg-warning text-white d-flex justify-content-center align-items-center p-2">Em processo de adoção</div>
                     <% end %>
                   <% end %>
                 </div>
@@ -88,9 +90,24 @@
                   <p class="mb-0"><%= animal.city %>/<%= animal.state %></p>
                 </div>
 
-                <div class="icons">
+                <div class="icons d-flex">
                   <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(animal), class:"info" %>
-                  <%= link_to "<i class=\"fa-solid fa-heart\"></i>".html_safe, animal_path(animal), class:"info" %>
+
+                  <% if current_user.adopter? && animal.adoptions.none? { |adoption| adoption.status == "Aceito" || adoption.status == "Pendente" } %>
+                    <% if current_user.bookmarks.exists?(animal_id: animal.id) %>
+                      <% bookmark = current_user.bookmarks.find_by(animal_id: animal.id) %>
+                      <%= button_to "<i class='fa-solid fa-heart red-heart'></i>".html_safe,
+                        bookmark_path(bookmark), method: :delete,
+                        style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;",
+                        class: "info ms-1 favorite-button" %>
+                    <% else %>
+                      <%= button_to "<i class='fa-solid fa-heart'></i>".html_safe,
+                        bookmarks_path, method: :post, params: { bookmark: { animal_id: animal.id } },
+                        style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;",
+                        class: "info ms-1 favorite-button" %>
+                    <% end %>
+                  <% end %>
+
                 </div>
               </div>
             </div>
