--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -28,6 +28,7 @@
     
     .avatar-show {
         width: 200px;
+        height: 200px;
         border-radius: 50%;
         object-fit: cover;
     }
