--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,8 +1,22 @@
 <div class="container mb-4">
   <div class="mb-4">
     <p class="navigation mb-1 mt-5"><%= link_to "Home", "/", class:"navigation" %> / Animais para adoção</p>
-    <h4 class="second-title"><%=@animals.count %> animais para adoção</h4>
+    <h4 class="second-title mb-0"><%=@animals.count %> animais para adoção</h4>
   </div>
+
+  <%= form_tag animals_path, method: :get do %>
+    <div class="d-flex mb-4">
+      <% Animal.pluck(:specie).uniq.each do |specie| %>
+        <div class="form-check ps-0">
+          <%= radio_button_tag "search", specie, params[:search] == specie, id: "specie_#{specie.parameterize}", class: "tag-selector" %>
+          <%= label_tag "specie_#{specie.parameterize}", specie, class:"m-0 me-2" %>
+        </div>
+      <% end %>
+      <%= button_tag(type: 'submit', class: "btn-simple") do %>
+        <i class="fa-solid fa-magnifying-glass"></i>
+      <% end %>
+    </div>
+  <% end %>
 
   <div class="row d-flex align-items-between mx-3">
     <% @animals.each do |animal| %>
