--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,12 +8,12 @@
           <%= f.input :first_name,
                       label: "Nome",
                       autofocus: true,
-                      required: true, class:"first-name" %>
-          <%= f.input :last_name, label: "Sobrenome", required: true, class:"last-name" %>
-          <%= f.input :photo, label: "Foto do Perfil", as: :file %>
+                      required: true, class:"first-name", placeholder: 'Digite seu nome' %>
+          <%= f.input :last_name, label: "Sobrenome", required: true, class:"last-name", placeholder: 'Digite o seu sobrenome' %>
+          <%= f.input :photo, label: "Foto do Perfil", as: :file, required: true %>
           <%= f.input :email,
                       required: true,
-                      input_html: { autocomplete: "email" } %>
+                      input_html: { autocomplete: "email" }, placeholder: 'email@email.com' %>
           <%= f.input :password,
                       required: true,
                       hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -22,9 +22,9 @@
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
 
-          <%= f.input :city, label: "Cidade", required: true %>
-          <%= f.input :state, label: 'Estado', as: :select, collection: @states, placeholder: 'Selecione o Estado', include_blank: true, class:"state ms-3", required: true %>
-          <%= f.input :phone, label: "Telefone", required: true %>
+          <%= f.input :city, label: "Cidade", required: true, placeholder: 'Selecione o Estado' %>
+          <%= f.input :state, label: 'Estado', as: :select, collection: @states, placeholder: 'Selecione o Estado', include_blank: true, class:"state ms-3", required: true, placeholder: 'São Paulo' %>
+          <%= f.input :phone, label: "Telefone", placeholder: 'Digite o telefone com 9 dígitos', required: true %>
           <%= f.input :adopter, label: "Quero adotar", input_html: { data: { action: "change->tab#checkAdopter", target: "tab.adopter" } } %>
         </div>
 
