--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
               <li class="nav-item dropdown">
               <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <% if current_user.photo.attached? %>
-                  <%= cl_image_tag current_user.photo.key, class: "avatar", alt: "dropdown menu", height: 40, width: 40 %>
+                  <%= cl_image_tag current_user.photo.key, class: "avatar", alt: "dropdown menu", height: 40, width: 40, crop: :fill %>
                 <% else %>
                   <%= image_tag "cat.jpg", class: "avatar", alt: "dropdown menu", height: 40, width: 40 %>
                  <% end %>
