--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
    <% if user_signed_in? && @user.adopter? %> <%#se o usuário estiver logado e o user que ele clica for um adotante %>
 
-    <div class="d-flex w-100 mt-3 px-4">
+    <div class="d-flex flex-row w-100 mt-3 px-4">
       <% if @user.photo.attached? %>
-        <%= cl_image_tag @user.photo.key, class: "avatar-show", alt: "avatar photo", height: 150, width: 200 %>
+        <%= cl_image_tag @user.photo.key, class: "avatar-show", alt: "avatar photo", height: 200, width: 200, crop: :fill %>
       <% else %>
         <%= image_tag "cat.jpg", class: "avatar-show", alt: "avatar photo", height: 200, width: 200 %>
       <% end %>
@@ -56,7 +56,7 @@
 
     <div class="d-flex w-100 mt-3 px-4">
       <% if @user.photo.attached? %>
-        <%= cl_image_tag @user.photo.key, class: "avatar-show", alt: "avatar photo", height: 200, width: 200 %>
+        <%= cl_image_tag @user.photo.key, class: "avatar-show", alt: "avatar photo", height: 200, width: 200, crop: :fill %>
       <% else %>
         <%= image_tag "cat.jpg", class: "avatar-show", alt: "avatar photo", height: 200, width: 200 %>
       <% end %>
@@ -80,7 +80,6 @@
           <h2 class="h2-info ms-5"><strong><%= count %></strong> animais adotados</h2>
         </div>
       </div>
-
     </div>
 
     <div class="row d-flex align-items-between mx-3 mt-5 mb-4">
