--- a/app/assets/stylesheets/components/_match.scss
+++ b/app/assets/stylesheets/components/_match.scss
@@ -128,3 +128,63 @@
 .view-match {
     height: 100% !important;
 }
+
+// progress bar2
+@keyframes progress {
+    0% {
+        --percentage: 0;
+    }
+    100% {
+        --percentage: var(--value);
+    }
+}
+
+@property --percentage {
+    syntax: '<number>';
+    inherits: true;
+    initial-value: 0;
+}
+
+[role="progressbar2"] {
+    --percentage: var(--value);
+    --primary: #5A3E29;
+    --secondary: #cfcbc2;
+    --size: 75px;
+    animation: progress 2s 0.5s forwards;
+    width: var(--size);
+    height: var(--size);
+    ;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    display: grid;
+    place-items: center;
+}
+
+[role="progressbar2"]::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: conic-gradient(var(--primary) calc(var(--percentage) * 1%), var(--secondary) 0);
+    mask: radial-gradient(white 55%, transparent 0);
+    mask-mode: alpha;
+    -webkit-mask: radial-gradient(#0000 55%, #000 0);
+    -webkit-mask-mode: alpha;
+}
+
+[role="progressbar2"]::after {
+    counter-reset: percentage var(--value);
+    content: counter(percentage) '%';
+    font-family: $my-font;
+    font-weight: bold;
+    font-size: calc(var(--size) / 4);
+    color: var(--primary);
+}
+
+.view-match {
+    height: 100% !important;
+}
