--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -7,11 +7,13 @@
   <%= form_tag animals_path, method: :get do %>
     <div class="d-flex mb-4">
       <% Animal.pluck(:specie).uniq.each do |specie| %>
-        <div class="form-check ps-0">
+        <% if specie %>
+          <div class="form-check ps-0">
           <%= radio_button_tag "search", specie, params[:search] == specie, id: "specie_#{specie.parameterize}", class: "tag-selector" %>
           <%= label_tag "specie_#{specie.parameterize}", specie, class:"m-0 me-2" %>
-        </div>
-      <% end %>
+    </div>
+        <% end %>
+  <% end %>
       <%= button_tag(type: 'submit', class: "btn-simple") do %>
         <i class="fa-solid fa-magnifying-glass"></i>
       <% end %>
