--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -63,7 +63,7 @@
                         class: "info ms-1 favorite-button" %>
                     <% else %>
                       <%= button_to "<i class='fa-solid fa-heart'></i>".html_safe,
-                        bookmarks_path, method: :post, params: { bookmark: { animal_id: animal.id } },
+                        bookmarks_path(from_page: "animals"), method: :post, params: { bookmark: { animal_id: animal.id } },
                         style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;",
                         class: "info ms-1 favorite-button" %>
                     <% end %>
