bookmark dashboard ajeitado

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -47,6 +47,7 @@
               </div>
 
               <div data-show-dashboard-target="animalElement" class="mt-0 mb-5 d-none">
+                <%= render 'bookmarks/index' %>
               </div>
           </div>
         </div>
